# maC-adventure

./: .gitignore  CMakeLists.txt
client/: .clang-format  CMakeLists.txt
client/src/: main.cpp
client/src/Connection/: Connection.cpp  Connection.hpp
client/src/Message/: HeaderBodyExample.json  HeaderOnlyExample.json  Message.hpp  old_Message.hpp
client/src/NetModel/: IConsumer.hpp  IDataProvider.hpp  NetModel.hpp
client/src/QTstuff/: mainwindow.cpp  mainwindow.hpp
client/src/UI/: UI.hpp
client/src/types/: MessageTypes.hpp
server/: .clang-format  CMakeLists.txt
server/src/: main.cpp
server/src/Message/: IMessage.hpp  Message.cpp  Message.hpp  stash.hpp
server/src/NetModel/: IConsumer.hpp  IDataProvider.hpp  NetModel.hpp
server/src/Server/: ConnectionsManager.hpp  ISender.hpp  MessageProcessor.hpp  Server.cpp  Server.hpp  TcpConnection.cpp  TcpConnection.hpp
src/Connection/: Connection.cpp  Connection.hpp
src/Message/: IMessage.hpp  Message.cpp  Message.hpp
